services/rhesis-sdk/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rhesis-sdk
  labels:
    app.kubernetes.io/name: rhesis-sdk
    app.kubernetes.io/instance: rhesis-sdk
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/component: sdk
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: rhesis-sdk
    app.kubernetes.io/instance: rhesis-sdk
